@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1343 2007/06/10 22:21:46 tonio Exp $
+$NetBSD: CHANGES-2007,v 1.1344 2007/06/10 23:26:53 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2554,3 +2554,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated devel/ko-po-check to 0.8nb1 [minskim 2007-06-10]
 	Updated mail/imapfilter to 1.3 [tonio 2007-06-10]
 	Updated chat/weechat to 0.2.5 [tonio 2007-06-10]
+	Added p5-Template-Stash-EscapeHTML version 0.01 [abs 2007-06-10]
